# CMEPDA_project_transformer_jet_tagging

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
configs/: config.json
docs/source/: conf.py  index.rst  modules.rst  transformer_jet_tagging.rst  trasformer_jet_tagging.rst
outputs/checkpoints/: best_model.pt
outputs/checkpoints/runs/: events.out.tfevents.1775755619.lnasini-MS-7B61.10335.0  events.out.tfevents.1775843501.rizzigpu.692454.0  events.out.tfevents.1775845104.rizzigpu.693984.0  events.out.tfevents.1776264669.rizzigpu.903272.0  events.out.tfevents.1777042070.lnasini-MS-7B61.31000.0  events.out.tfevents.1777050235.lnasini-MS-7B61.42136.0  events.out.tfevents.1777050340.lnasini-MS-7B61.42343.0  events.out.tfevents.1777050484.lnasini-MS-7B61.42655.0
outputs/preprocess/: norm_stats.json
src/transformer_jet_tagging/: __init__.py  __main__.py  constants.py  dataset.py  evaluate.py  model.py  plotting.py  preprocess.py  train.py  utils.py
src/trasformer_jet_tagging/: dataset.py  evaluate.py  model.py  plotting.py  preprocess.py  train.py  utils.py
src/trasformer_jet_tagging/configs/: config.json
tests/: conftest.py  test_dataset.py  test_model.py  test_plotting.py  test_train.py  test_utils.py
